experiment_output/error_log/nondex-jaymindesai-segment-aop.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task934/wd/NonDex-plugin-test/github.com/jaymindesai/segment-aop/src/main/java/com/segment/domain/SegmentTracker.java:8: error: package com.sun.javafx.fxml does not exist
import com.sun.javafx.fxml.PropertyNotFoundException;
                          ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 5s
